# LANjam

./: CMakeLists.txt  README.md  temp.txt  vcpkg.json
docs/screenshots/: README.txt
src/audio/: AudioIO.cpp  AudioIO.h  SynthVoice.cpp  SynthVoice.h
src/client/: main_client.cpp  main_client_gui.cpp
src/common/: Discovery.h  JitterBuffer.cpp  JitterBuffer.h  Packet.h  UdpSocket.cpp  UdpSocket.h
src/gui/: GuiApp.cpp  GuiApp.h  GuiStyle.cpp  GuiStyle.h
src/server/: ServerGuiApp.cpp  ServerGuiApp.h  main_server.cpp  main_server_gui.cpp
